account spacing fix

--- a/client/src/components/account/Account.css
+++ b/client/src/components/account/Account.css
@@ -33,19 +33,16 @@
   width: fit-content;
   padding: 0 10px 0 10px;
   background: aliceblue;
+  color: rgb(82, 160, 198);
 }
 
 .account__container button:hover {
   background-color: var(--color-light);
 }
 
-.success__msg, .error__msg {
-  /* color: rgb(82, 173, 253); */
-}
-
 /* ===== MEDIA QUERIES (PHONES) ===== */
 @media screen and (max-width: 850px) {
-  .account__container form {
-    justify-content: end;
+  .account__container {
+    gap: 8rem;
   }
 }
